--- a/html_1.html
+++ b/html_1.html
@@ -3,105 +3,139 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-
 </head>
 <body>
-	<!-- 网站一级标题 -->
-	<h1>百度前端基础练习HTML(1)</h1>
-		<!-- 四个导航链接 -->
-		<ul>
-			<li><a href="http://www.baidu.com" target="_blank">导航链接一</a></li>
-			<li><a href="http://www.baidu.com" target="_blank">导航链接二</a></li>
-			<li><a href="http://www.baidu.com" target="_blank">导航链接三</a></li>
-			<li><a href="http://www.baidu.com" target="_blank">导航链接四</a></li>
-		</ul>
-	<!-- 文章一级标题	 -->
-	<h1>中乙队赛前突然换帅仍胜毅腾</h1>	
-		<!-- 文章二级标题 -->
-		<div>
-			<h2>高原黑马欲阻击舜天</h2>
-			<!-- 文章作者，文章发表时间 -->
-			<span>新浪体育 2014年07月16日20:11</span>
-
-			<p>新浪体育讯　7月16日是燕京啤酒[微博]2014中国足协杯第三轮比赛，丽江嘉云昊队主场迎战哈尔滨毅腾队的比赛日。<br>然而就在比赛日中午，<a href="http://ife.baidu.com">百度前端学院</a>丽江嘉云昊队主帅李虎和另外两名成员悄然向俱乐部提出了辞呈，<strong>并且收拾行囊准备离开</strong>。在这样的情况下，丽江嘉云昊队不得不由此前的教练员杨贵东代理指挥了本场比赛。
-			</p>
-
-				<img src="C:\Users\ASUS\Desktop\新建文件夹 (2)\01.jpg" alt="美女">
-				<ul>
-					<li>列表项目一</li>
-					<li>列表项目二</li>
-					<li>列表项目三</li>
-				</ul>
-		</div>
-		<div>
-			<h1>奥斯卡典礼多位明星戴蓝丝带</h1>
-				<h2>抵制特朗普移民禁令</h2>
-					<span>来源：国际在线 2017-02-27 11:19:47</span>
-						<ol>
-							<li>1</li>
-							<li>2</li>	
-							<li>3</li>					
-						</ol>
-						<table border="1" width="500" height="300">
-							<tr>
-								<th>品名</th>
-								<th>单价</th>
-								<th>数量</th>
-							</tr>
-							<tr>
-								<td align="center">瓜子</td>
-								<td align=""></td>
-								<td align=""></td>
-							</tr>
-							<tr>
-								<td align="center">花生</td>
-								<td align="center"></td>
-								<td align="center"></td>
-							</tr>
-							<tr>
-								<td align="center">核桃</td>
-								<td align="center"></td>
-								<td align="center"></td>
-							</tr>
-							<tr>
-								<td align="center">牛奶</td>
-								<td align="center"></td>
-								<td align="center"></td>
-							</tr>
-							<tr>
-								<td align=""></td>
-								<td colspan="2"></td>
-								<!-- <td></td> -->
-							</tr>
-						</table>
-		</div>
-		<div>
-				<aside>
-					<h1>注册</h1>
-						<p>注册信息填写：</p>
-				</aside>
-				<p>请输入邮箱地址：<input type="text" value="邮箱地址">
-				<br>邮箱地址请按要求格式输入</p>
-				<p>请输入密码：<input type="password" value="输入密码">
-				请重复输入密码：<input type="password" value="请输入密码">
-				</p>
-				<p>
-					性别：<input type="radio" name="gender" checked="		checked">男
-						  <input type="radio" name="gender" >女
-					城市：<select>
-							<option selected="selected">北京</option>
-							<option>四川</option>
-							<option>上海</option>
-						  </select>
-					爱好：<input type="checkbox" checked="checked">运动
-						  <input type="checkbox">艺术
-						  <input type="checkbox">科学
-					个人描述：<textarea cols="130" rows="10">请输入个人简历</textarea>
-					<input type="submit" value="确认提交">
-				</p>
-
-		</div>
-
-
+	<div>
+		<h1>网站一级标题</h1>
+			<ul>
+				<li><a href="#">导航链接一</a></li>
+				<li><a href="#">导航链接二</a></li>
+				<li><a href="#">导航链接三</a></li>
+				<li><a href="#">导航链接四</a></li>
+			</ul>
+	</div>
+	<article>
+		<h1>文章一级标题</h1>
+			<h2>文章二级标题</h2>
+				<span>文章作者 文章发表时间</span>
+					<p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<br><br>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<br>这是一个很长的段落，这是一个很长的段落，
+					<a href="http://ife.baidu.com">百度前端学院官网</a>这是一个很长的段落，这是一个很长的段落，
+					<strong>这是一个很长的段落</strong>，
+					这是一个很长的段落，这是一个很长的段落。<br><br>
+					<img src="01.jpg" alt="美女"><br><br>
+					这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落<br>这是一个很长的段落，
+					<a href="http://ife.baidu.com" target="blank">百度前端学院官网（新窗口打开）</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<strong>这是一个很长的段落</strong>，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+					</p>
+	</article>
+	<article>
+		<h1>另一篇文章一级标题</h1>
+			<h2>文章二级标题</h2>
+				<span>文章作者 文章发表时间</span>
+					<p>
+					这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<br><br>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<br>这是一个很长的段落，这是一个很长的段落，
+					<a href="http://ife.baidu.com">百度前端学院官网</a>这是一个很长的段落，这是一个很长的段落，
+					<strong>这是一个很长的段落</strong>，
+					这是一个很长的段落，这是一个很长的段落。<br><br>
+					<img src="01.jpg" alt="美女"><br><br>
+						<ul>
+							<li>列表项目一</li>
+							<li>列表项目二</li>
+							<li>列表项目三</li>
+						</ul>
+					<h2>图片</h2>
+						<figure>
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+							<p>好看的图片</p>
+							<img src="01.jpg" alt="">
+						</figure>
+					</p>
+	</article>
+	<article>
+		<h1>最后一篇文章一级标题</h1>
+			<h2>文章二级标题</h2>
+				<span>文章作者 文章发表时间</span>
+					<ol>
+						<li>排名1</li>
+						<li>排名2</li>
+						<li>排名3</li>
+					</ol>
+					<span>下面是一个表格，给表格加了一个border="1"好让你看出来是一个表格</span>
+					<table border="1">
+						<tr>
+							<th>表头</th>
+							<th>表头</th>
+							<th>表头</th>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><input type="button" value="操作"></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><input type="button" value="操作"></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><input type="button" value="操作"></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><input type="button" value="操作"></td>
+						</tr>
+						<tr>
+							<td>总计</td>
+							<td colspan="2">1000</td>
+							<!-- <td></td> -->
+						</tr>
+					</table>
+					<aside>
+						<h1>这里以后是一个侧栏，这是侧栏的标题</h1>
+							<h1>侧栏注册窗口标题</h1>
+							<form action="">
+								请输入邮箱地址：<input type="text" value="这是一个文本输入框"><br>
+								<p>邮箱地址请按要求格式输入</p>
+								请输入密码：<input type="text" value="文本输入框">请重复输入密码：<input type="text" value="这是一个文本输入框"><br>
+								<p>密码请为6-16位英文数字</p><br><br>
+								性别：<input type="radio" name="gender" checked="checked">男
+									  <input type="radio" name="gender">女
+								城市：<select>
+										<optgroup label="北京市" >
+											<option value="昌平">昌平</option>
+											<option value="海淀">海淀</option>
+											<option value="怀柔">怀柔</option>
+											<option value="北京" selected="selected">北京</option>
+										</optgroup>
+										<optgroup label="四川省">
+											<option value="">成都</option>
+											<option value="">巴中</option>
+											<option value="">达州</option>
+										</optgroup>
+									   </select>
+								爱好：<input type="checkbox" checked="checked">运动
+									  <input type="checkbox" checked="checked">艺术
+									  <input type="checkbox" checked="checked">科学
+								个人描述：<textarea cols="120" rows="5"></textarea>  
+										  <input type="button" value="确认提交">
+									  	  
+							</form>
+					</aside>
+	</article>
+	<footer>
+		版权所有&嘻哈
+	</footer>
+	
 </body>
 </html>
